# YeeMusic

./: .env  .gitignore  README.md  components.json  index.html  next.config.ts  package.json  pnpm-lock.yaml  update.md  vite.config.ts
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: playlist-card.tsx  recent-listen-card.tsx  section.tsx  song-preview.tsx  songlistcard.tsx  songpreview.tsx  voice-preview.tsx
app/favorite/: page.tsx
app/provider/: AuthConfig.tsx
app/search/: page.tsx
components/: YeeSlider.tsx  app-sidebar.tsx  detail-page-skeleton.tsx  login-form.tsx  logout-form.tsx  lyric-sheet-songinfo.tsx  lyric-sheet-songlist.tsx  lyric-sheet-songlyric.tsx  lyric-sheet.tsx  main-content.tsx  marquee.tsx  music-level-popover.tsx  my-tooltip.tsx  player-duration-slider.tsx  playerbar copy.tsx  playerbar.tsx  playlist-sheet.tsx  playlist-song-preview.tsx  search-input.tsx  slide-and-fade-page.tsx  titlebar.tsx  yee-dialog.tsx  yee-tooltip.tsx
components/album/: album-item.tsx  album-list.tsx
contexts/: titlebar-context.tsx
docs/: UI_GUIDELINES.md
hooks/: use-scroll-overflow-mask.ts
lib/: api.ts  types.ts  utils.ts
public/: homepage.json
scripts/: update.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cache.rs  lib.rs  local_music.rs  smtc.rs  thumbbar.rs
src-tauri/src/audio/: command.rs  controller.rs  device.rs  dsp.rs  engine.rs  event.rs  pipeline.rs  snapshot.rs  source.rs  state.rs  streaming.rs  types.rs
(+267 files in other folders)
