[package]
name = "yee-music-react-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yee_music_react_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
souvlaki = "0.8"
raw-window-handle = "0.6"
lofty = "0.22"
walkdir = "2"
percent-encoding = "2"
base64 = "0.22"
windows = { version = "0.44", features = [
  "Win32_Foundation", 
  "Win32_Graphics_Gdi", 
  "Win32_System_Com", 
  "Win32_UI_Shell", 
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Imaging",
  "Win32_Storage_FileSystem",
] }
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["stream"] }
dirs = "5"
futures-util = "0.3"
rodio = { version = "0.17", features = ["symphonia-aac", "symphonia-isomp4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
